--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,29 @@
 * {
   font-family: "Baloo 2", cursive;
   font-size: 16px;
+  scrollbar-width: thin;
+  scrollbar-color: #FCE white;
+}
+
+* ::-webkit-scrollbar-corner {
+  background-color: transparent;
+}
+
+* ::-webkit-scrollbar {
+  width: 15px;
+  height: 15px;
+}
+
+* ::-webkit-scrollbar-track {
+  background-color: transparent;
+  border-radius: 10px;
+  border: 4px solid transparent;
+  background-clip: content-box;
+}
+
+* ::-webkit-scrollbar-thumb {
+  background-color: #FCE;
+  border-radius: 10px;
+  border: 4px solid transparent;
+  background-clip: content-box;
 }
